# gen/http/query_svc/server/encode_decode.go
@@ -50,6 +50,7 @@ func DecodeQueryResourcesRequest(mux goahttp.Muxer, decoder func(*http.Request) 
 			dateFrom    *string
 			dateTo      *string
 			filters     []string
+			filtersAll  []string
 			filtersOr   []string
 			celFilter   *string
 			sort        string
@@ -101,6 +102,7 @@ func DecodeQueryResourcesRequest(mux goahttp.Muxer, decoder func(*http.Request) 
 			dateTo = &dateToRaw
 		}
 		filters = qp["filters"]
+		filtersAll = qp["filters_all"]
 		filtersOr = qp["filters_or"]
 		celFilterRaw := qp.Get("cel_filter")
 		if celFilterRaw != "" {
@@ -149,7 +151,7 @@ func DecodeQueryResourcesRequest(mux goahttp.Muxer, decoder func(*http.Request) 
 		if err != nil {
 			return nil, err
 		}
-		payload := NewQueryResourcesPayload(version, name, parent, type_, tags, tagsAll, dateField, dateFrom, dateTo, filters, filtersOr, celFilter, sort, pageToken, pageSize, bearerToken)
+		payload := NewQueryResourcesPayload(version, name, parent, type_, tags, tagsAll, dateField, dateFrom, dateTo, filters, filtersAll, filtersOr, celFilter, sort, pageToken, pageSize, bearerToken)
 		if strings.Contains(payload.BearerToken, " ") {
 			// Remove authorization scheme prefix (e.g. "Bearer")
 			cred := strings.SplitN(payload.BearerToken, " ", 2)[1]
@@ -245,6 +247,7 @@ func DecodeQueryResourcesCountRequest(mux goahttp.Muxer, decoder func(*http.Requ
 			dateFrom    *string
 			dateTo      *string
 			filters     []string
+			filtersAll  []string
 			filtersOr   []string
 			bearerToken string
 			err         error
@@ -289,6 +292,7 @@ func DecodeQueryResourcesCountRequest(mux goahttp.Muxer, decoder func(*http.Requ
 			dateTo = &dateToRaw
 		}
 		filters = qp["filters"]
+		filtersAll = qp["filters_all"]
 		filtersOr = qp["filters_or"]
 		bearerToken = r.Header.Get("Authorization")
 		if bearerToken == "" {
@@ -297,7 +301,7 @@ func DecodeQueryResourcesCountRequest(mux goahttp.Muxer, decoder func(*http.Requ
 		if err != nil {
 			return nil, err
 		}
-		payload := NewQueryResourcesCountPayload(version, name, parent, type_, tags, tagsAll, dateField, dateFrom, dateTo, filters, filtersOr, bearerToken)
+		payload := NewQueryResourcesCountPayload(version, name, parent, type_, tags, tagsAll, dateField, dateFrom, dateTo, filters, filtersAll, filtersOr, bearerToken)
 		if strings.Contains(payload.BearerToken, " ") {
 			// Remove authorization scheme prefix (e.g. "Bearer")
 			cred := strings.SplitN(payload.BearerToken, " ", 2)[1]
